--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: A little blog about code, probably
+description: Might be blogging about frontend frameworks or techniques around that, or some backend, probably C# and EPiServer since that's what I work with. There might even be stuff about builds and deploys. Or maybe something about life - who knows yet!?
